# zero2prod

./: Cargo.toml  Dockerfile  Makefile  configuration.yaml  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  startup.rs  telemetry.rs
src/authentication/: mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs
